# StereoReconstruction

./: .gitignore  CMakeLists.txt  README.md  run_docker_dev.bat
data/: README.md
include/: stereo_reconstruction.hpp
src/: 8point.cpp  8point.h  CMakeLists.txt  colorUtils.cpp  denseMatching.cpp  denseMatching.h  depth.cpp  depth.h  disparity.cpp  disparity.h  main.cpp  meshReconstruction.cpp  meshReconstruction.h
test/: CMakeLists.txt  depth_raw.exr  plot.py
